--- a/app/main.css
+++ b/app/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+
 body{
     display: flex;
     flex-direction: column;
@@ -6,6 +8,8 @@ body{
     background-color: #e4dede;
     padding: 0;
     margin: 0;
+    font-family: 'Quicksand', Arial, Helvetica, sans-serif;
+    -webkit-app-region: drag;
 }
 
 .nav{
@@ -45,7 +49,24 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 80px 0 150px 0;
+    padding: 0 0 150px 0;
+}
+
+
+
+.progress{
+    width: 100%;
+    text-align: center;
+    background-color: #191970;
+    color: #e4dede;
+    padding: 50px 0;
+}
+
+.progress p{
+    padding-top: 5px;
+    margin: 0;
+    font-weight: bolder;
+    font-size: 24px;
 }
 
 .header{
@@ -54,19 +75,7 @@ body{
 }
 
 .header img{
-    width: 50%;
-}
-
-.progress{
-    width: 100%;
-    text-align: center;
-}
-
-.progress p{
-    padding-top: 5px;
-    margin: 0;
-    font-weight: bold;
-    font-size: 20px;
+    width: 100px;
 }
 
 .container{
@@ -95,6 +104,7 @@ body{
     margin-bottom: 10px;
     box-shadow: 1px 1px 5px rgb(145, 144, 144);
     border-radius: 5px;
+    width: 300px;
 }
 
 .field p{
@@ -104,11 +114,12 @@ body{
 .key{
     color: black;
     opacity: 0.7;
-    font-size: 13px;
+    font-size: 14px;
 }
 
 .value{
     color: black;
+    font-size: 18px;
 }
 
 .footer{
